--- a/index.html
+++ b/index.html
@@ -1,24 +1,97 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GC para Streams</title>
-    <style>
-      /* Ensure transparency for OBS */
-      html, body, #root {
-        background: transparent !important;
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        width: 100%;
-        overflow: hidden;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GCSTREAM - Página Principal</title>
+  <style>
+    /* Estilos Globais */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+
+    header {
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+
+    main {
+      padding: 20px;
+    }
+
+    /* Estilos da Grade */
+    .grid-preview {
+      background-color: #00ff00; /* Verde intenso */
+      padding: 20px;
+      border-radius: 10px;
+      margin: 20px 0;
+    }
+
+    .grid-container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr); /* 3 colunas */
+      grid-template-rows: repeat(3, 1fr); /* 3 linhas */
+      gap: 10px; /* Espaço entre as células */
+      width: 100%;
+      max-width: 600px; /* Tamanho máximo da grade */
+      margin: 0 auto;
+    }
+
+    .grid-cell {
+      background-color: rgba(255, 255, 255, 0.8); /* Células semi-transparentes */
+      border: 1px solid #000;
+      aspect-ratio: 1; /* Mantém as células quadradas */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.5em;
+      font-weight: bold;
+    }
+
+    /* Estilos para outros conteúdos */
+    .other-content {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      margin-top: 20px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>GCSTREAM</h1>
+  </header>
+
+  <main>
+    <!-- Seção da Grade -->
+    <section class="grid-preview">
+      <div class="grid-container">
+        <div class="grid-cell">1</div>
+        <div class="grid-cell">2</div>
+        <div class="grid-cell">3</div>
+        <div class="grid-cell">4</div>
+        <div class="grid-cell">5</div>
+        <div class="grid-cell">6</div>
+        <div class="grid-cell">7</div>
+        <div class="grid-cell">8</div>
+        <div class="grid-cell">9</div>
+      </div>
+    </section>
+
+    <!-- Outros conteúdos da página -->
+    <section class="other-content">
+      <h2>Bem-vindo ao GCSTREAM</h2>
+      <p>
+        Este é um exemplo de página principal com uma grade de preview.
+        O fundo da grade está em verde, e as células são numeradas.
+      </p>
+    </section>
+  </main>
+</body>
 </html>
