--- a/index.html
+++ b/index.html
@@ -15,6 +15,31 @@
         width: 100%;
         overflow: hidden;
       }
+
+      /* Estilo para o container do live preview */
+      .live-preview-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #00ff00; /* Fundo verde (green screen) */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000; /* Garante que fique acima de outros elementos */
+      }
+
+      /* Estilo para o conteúdo do live preview */
+      .live-preview-content {
+        width: 90%; /* Ajuste o tamanho conforme necessário */
+        height: 90%;
+        background: transparent;
+        border: 2px solid #000; /* Borda para visualização */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
     </style>
   </head>
   <body>
@@ -33,16 +58,46 @@
         window.open(previewUrl, '_blank');
       }
 
+      // Função para exibir o live preview na página principal
+      function showLivePreview(content) {
+        // Cria o container do live preview
+        const previewContainer = document.createElement('div');
+        previewContainer.className = 'live-preview-container';
+
+        // Cria o conteúdo do live preview
+        const previewContent = document.createElement('div');
+        previewContent.className = 'live-preview-content';
+        previewContent.innerHTML = content;
+
+        // Adiciona o conteúdo ao container
+        previewContainer.appendChild(previewContent);
+
+        // Adiciona o container ao body
+        document.body.appendChild(previewContainer);
+
+        // Adiciona um botão para fechar o preview
+        const closeButton = document.createElement('button');
+        closeButton.innerText = 'Fechar Preview';
+        closeButton.style.position = 'absolute';
+        closeButton.style.top = '10px';
+        closeButton.style.right = '10px';
+        closeButton.style.zIndex = '1001';
+        closeButton.onclick = () => {
+          document.body.removeChild(previewContainer);
+        };
+        previewContainer.appendChild(closeButton);
+      }
+
       // Exemplo de uso:
       // Suponha que você tenha um conteúdo HTML para o preview
       const previewContent = `
-        <div style="background: rgba(0, 255, 0, 0.5); padding: 20px; color: white;">
+        <div style="background: rgba(0, 0, 0, 0.5); padding: 20px; color: white;">
           Este é um exemplo de conteúdo com transparência.
         </div>
       `;
 
-      // Abre o live preview com o conteúdo (pode ser chamado de qualquer lugar no seu código)
-      // openLivePreview(previewContent);
+      // Exibe o live preview na página principal
+      showLivePreview(previewContent);
     </script>
   </body>
 </html>
